// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components RolebindingList should render itself and its subcomponents when rolebindings.length === 0 1`] = `
<div
  className="rolebinding-container"
>
  <h3>
    some-namespace rolebindings:
  </h3>
  <ul
    className="rolebinding-list"
  />
</div>
`;

exports[`components RolebindingList should render itself and subcomponents when rolebindings.length > 0 1`] = `
<div
  className="rolebinding-container"
>
  <h3>
    some-namespace rolebindings:
  </h3>
  <ul
    className="rolebinding-list"
  >
    <RolebindingListItem
      key="rolebinding1"
      rolebindingName="rolebinding1"
    />
    <RolebindingListItem
      key="rolebinding2"
      rolebindingName="rolebinding2"
    />
  </ul>
</div>
`;
